# newsletter

./: .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  The_Winning_Formula_PRD.docx
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
brand/: beehiiv-custom-css.css  brand_guidelines.md  email-template-light.html  email-template-pink.html  email-template-v2.html  email-template.html  founder_raw_input.md  founder_story.md  voice_guide.md
content/: automation-strategy.md  content-rules.md  monetization-strategy.md  n8n-trends-tracker.md  newsletter-formatting-guide.md
content/drafts/: issue-001-f1-2026-preview.md  issue-002-2026-car-size-comparison.md  property-issue-1-yield-calculator.md
drafts/: property-issue-1.html
ideas-mcp-server/: .mcp.json.example  server.py
nano-banana-mcp-server/: nanobanana_server.py  pyproject.toml
scrapers/: cli.py  debug_scraper.py  property24_scraper.py  pyproject.toml  suburb_analyzer.py
scrapers/data/: kenilworth_rentals.json  kenilworth_sales.json
scrapers/f1/: 2024_car_upgrades_research.md  cli.py  f1_analyzer.py  f1_extractor.py  mclaren_2024_prompts.md
scrapers/f1/framer/: McLarenEvolution.tsx  championship-progression.html  mclaren-evolution-embed.html  mclaren-evolution-hosted.html  mclaren-evolution-optimized.html
scrapers/ideas/: __init__.py  live_ideas.py  newsletter_ideas.py  tool_ideas.py
scrapers/property/tools/: rental-yield-calculator-sheets.md  rental-yield-calculator.html  rental-yield-template.csv
